--- a/main.html
+++ b/main.html
@@ -4,7 +4,11 @@
   </head>
   <body>
     Enter your name: <input type="text" id="fname">
-	
+	<button id="btn">Transform Name</button>
+    <div id="output">
+		
+	</div>
+	  
 	<script type="text/javascript" src="./script.js">
 	</script>
   </body>
